--- a/src/app/sections/Experience/Experience.module.scss
+++ b/src/app/sections/Experience/Experience.module.scss
@@ -1,6 +1,17 @@
-.experience {
-  padding: 100px 0;
+@import "/src/app/styles/mixins.scss";
 
+.experience {
+  @include media-breakpoint-down(lg) {
+    padding: 25px 0;
+  }
+
+  @include media-breakpoint-between(lg, l) {
+    padding: 50px 0;
+  }
+
+  @include media-breakpoint-up(l) {
+    padding: 100px 0;
+  }
   &:not(.experience--v3) {
     background: linear-gradient(
       180deg,
@@ -18,14 +29,6 @@
   }
 
   &__image {
-    &:not(.experience__image--v2) {
-      height: 937px;
-    }
-
-    &--v2 {
-      height: 1490px;
-    }
-
     width: 100%;
 
     img {
@@ -51,11 +54,53 @@
   }
 
   &__image-left {
-    left: 140px;
     align-items: flex-end;
+
+    @include media-breakpoint-down(xs) {
+      left: 40px;
+    }
+
+    @include media-breakpoint-between(xs, sm) {
+      left: 70px;
+    }
+
+    @include media-breakpoint-between(sm, md) {
+      left: 100px;
+    }
+
+    @include media-breakpoint-between(md, l) {
+      left: 150px;
+    }
+
+    @include media-breakpoint-between(l, xl) {
+      left: 130px;
+    }
+
+    @include media-breakpoint-up(xl) {
+      left: 140px;
+    }
     div:nth-of-type(1) {
-      width: 380px;
-      height: 600px;
+      @include media-breakpoint-down(sm) {
+        width: 76px;
+        height: 121px;
+      }
+      @include media-breakpoint-between(sm, lg) {
+        width: 126px;
+        height: 181px;
+      }
+
+      @include media-breakpoint-between(lg, l) {
+        width: 180px;
+        height: 300px;
+      }
+      @include media-breakpoint-between(l, xl) {
+        width: 280px;
+        height: 500px;
+      }
+      @include media-breakpoint-up(xl) {
+        width: 380px;
+        height: 600px;
+      }
 
       img {
         width: 100%;
@@ -64,8 +109,29 @@
     }
 
     div:nth-of-type(2) {
-      width: 274px;
-      height: 263px;
+      @include media-breakpoint-down(sm) {
+        width: 55px;
+        height: 53px;
+      }
+
+      @include media-breakpoint-between(sm, lg) {
+        width: 105px;
+        height: 105px;
+      }
+
+      @include media-breakpoint-between(lg, l) {
+        width: 140px;
+        height: 140px;
+      }
+
+      @include media-breakpoint-between(l, xl) {
+        width: 250px;
+        height: 240px;
+      }
+      @include media-breakpoint-up(xl) {
+        width: 274px;
+        height: 263px;
+      }
 
       img {
         width: 100%;
@@ -75,10 +141,54 @@
   }
 
   &__image-right {
-    right: 140px;
+    @include media-breakpoint-down(xs) {
+      right: 40px;
+    }
+
+    @include media-breakpoint-between(xs, sm) {
+      right: 70px;
+    }
+
+    @include media-breakpoint-between(sm, md) {
+      right: 100px;
+    }
+
+    @include media-breakpoint-between(md, l) {
+      right: 150px;
+    }
+    @include media-breakpoint-between(l, xl) {
+      right: 130px;
+    }
+
+    @include media-breakpoint-up(xl) {
+      right: 140px;
+    }
+
     div:nth-of-type(1) {
-      width: 380px;
-      height: 276px;
+      @include media-breakpoint-down(sm) {
+        width: 73px;
+        height: 55px;
+      }
+
+      @include media-breakpoint-between(sm, lg) {
+        width: 140px;
+        height: 85px;
+      }
+
+      @include media-breakpoint-between(lg, l) {
+        width: 170px;
+        height: 90px;
+      }
+
+      @include media-breakpoint-between(l, xl) {
+        width: 280px;
+        height: 170px;
+      }
+
+      @include media-breakpoint-up(xl) {
+        width: 380px;
+        height: 276px;
+      }
 
       img {
         width: 100%;
@@ -87,8 +197,29 @@
     }
 
     div:nth-of-type(2) {
-      width: 380px;
-      height: 406px;
+      @include media-breakpoint-down(sm) {
+        width: 76px;
+        height: 81px;
+      }
+
+      @include media-breakpoint-between(sm, lg) {
+        width: 150px;
+        height: 180px;
+      }
+
+      @include media-breakpoint-between(lg, l) {
+        width: 170px;
+        height: 200px;
+      }
+      @include media-breakpoint-between(l, xl) {
+        width: 280px;
+        height: 340px;
+      }
+
+      @include media-breakpoint-up(xl) {
+        width: 380px;
+        height: 406px;
+      }
 
       img {
         width: 100%;
