--- a/src/app/components/Container/Container.module.scss
+++ b/src/app/components/Container/Container.module.scss
@@ -2,10 +2,10 @@
 
 .container {
   position: relative;
-  width: 100%;
+  max-width: 100%;
   z-index: 1;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-right: auto;
   margin-left: auto;
 }
