--- a/src/app/components/DemoItem/DemoItem.module.scss
+++ b/src/app/components/DemoItem/DemoItem.module.scss
@@ -1,18 +1,37 @@
+@import "/src/app/styles/mixins.scss";
+
 .demo-item {
   display: flex;
   flex-direction: column;
   gap: 40px;
 
   &__name {
-    font-size: 36px;
     font-weight: 600;
-    line-height: 43.2px;
     text-align: center;
+
+    @include media-breakpoint-down(md) {
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    @include media-breakpoint-between(md, lg) {
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    @include media-breakpoint-between(lg, xl) {
+      font-size: 28px;
+      line-height: 36px;
+    }
+
+    @include media-breakpoint-up(xl) {
+      font-size: 36px;
+      line-height: 43.2px;
+    }
   }
 
   &__image {
-    width: 800px;
-    height: 800px;
+    width: 100%;
     border-radius: 45px;
     overflow-y: hidden;
     box-shadow: 8px 8px 8px 0px #00000040;
@@ -30,6 +49,22 @@
     img {
       width: 100%;
       height: auto;
+    }
+
+    @include media-breakpoint-down(l) {
+      height: 380px;
+    }
+
+    @include media-breakpoint-between(l, xl) {
+      height: 400px;
+    }
+
+    @include media-breakpoint-between(xl, xxl) {
+      height: 600px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+      height: 800px;
     }
   }
 }
