--- a/src/app/components/Quality/Quality.module.scss
+++ b/src/app/components/Quality/Quality.module.scss
@@ -1,13 +1,52 @@
+@import "/src/app/styles/mixins.scss";
+
 .quality {
   &__item {
     display: flex;
     align-items: center;
-    gap: 15px;
 
     p {
-      font-size: 36px;
       font-weight: 500;
-      line-height: 54px;
+
+      @include media-breakpoint-down(md) {
+        font-size: 16px;
+        line-height: 24px;
+        gap: 10px;
+      }
+
+      @include media-breakpoint-up(md) {
+        gap: 15px;
+      }
+
+      @include media-breakpoint-between(md, lg) {
+        font-size: 22px;
+        line-height: 28px;
+      }
+
+      @include media-breakpoint-between(lg, xl) {
+        font-size: 26px;
+        line-height: 34px;
+      }
+
+      @include media-breakpoint-up(xl) {
+        font-size: 36px;
+        line-height: 54px;
+      }
+    }
+  }
+
+  &__icon {
+    @include media-breakpoint-down(md) {
+      width: 30px;
+      height: 33px;
+    }
+    @include media-breakpoint-between(md, xl) {
+      width: 32px;
+      height: 37px;
+    }
+    @include media-breakpoint-up(xl) {
+      width: 52px;
+      height: 57px;
     }
   }
 }
