--- a/src/app/components/SectionTitle/SectionTitle.module.scss
+++ b/src/app/components/SectionTitle/SectionTitle.module.scss
@@ -1,8 +1,25 @@
+@import "/src/app/styles/mixins.scss";
+
 .title {
-  font-size: 96px;
   font-weight: 600;
-  line-height: 115.2px;
   text-align: center;
   text-transform: capitalize;
-  margin-bottom: 45px;
+
+  @include media-breakpoint-down(md) {
+    font-size: 34px;
+    line-height: 40.8px;
+    margin-bottom: 20px;
+  }
+
+  @include media-breakpoint-between(md, xl) {
+    font-size: 74px;
+    line-height: 88px;
+    margin-bottom: 35px;
+  }
+
+  @include media-breakpoint-up(xl) {
+    font-size: 96px;
+    line-height: 115.2px;
+    margin-bottom: 45px;
+  }
 }
