--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button {
+  font-family: "__Montserrat_b1da2a", "__Montserrat_Fallback_b1da2a";
+}
