--- a/src/app/sections/Footer/Footer.module.scss
+++ b/src/app/sections/Footer/Footer.module.scss
@@ -1,5 +1,17 @@
+@import "/src/app/styles/mixins.scss";
+
 .footer {
-  padding: 100px 0;
+  @include media-breakpoint-down(lg) {
+    padding: 25px 0;
+  }
+
+  @include media-breakpoint-between(lg, l) {
+    padding: 50px 0;
+  }
+
+  @include media-breakpoint-up(l) {
+    padding: 100px 0;
+  }
 
   background: linear-gradient(
     0deg,
@@ -11,12 +23,29 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 15px 0 60px 0;
+
+    @include media-breakpoint-down(lg) {
+      flex-direction: column;
+      margin: 0 0 20px 0;
+    }
+
+    @include media-breakpoint-up(lg) {
+      margin: 15px 0 60px 0;
+    }
   }
 
   &__btns {
     display: flex;
     justify-content: center;
-    gap: 40px;
+
+    @include media-breakpoint-down(lg) {
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    @include media-breakpoint-up(lg) {
+      gap: 40px;
+    }
   }
 }
