--- a/src/app/sections/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/app/sections/Header/HeaderNav/HeaderNav.module.scss
@@ -1,14 +1,48 @@
+@import "/src/app/styles/mixins.scss";
+
 .header-nav {
   display: flex;
   align-items: center;
-  gap: 70px;
+
+  @include media-breakpoint-down(l) {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    background-color: #b2e025;
+    right: 0;
+    top: 0;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.288);
+    padding: 40px;
+    height: 100vh;
+    gap: 20px;
+  }
+
+  @include media-breakpoint-between(l, xl) {
+    gap: 30px;
+  }
+
+  @include media-breakpoint-between(xl, xxl) {
+    gap: 50px;
+  }
+
+  @include media-breakpoint-up(xxl) {
+    gap: 70px;
+  }
 
   a {
     color: black;
-    font-size: 18px;
     font-weight: 500;
-    line-height: 27px;
     transition: 0.3s ease;
+
+    @include media-breakpoint-down(l) {
+      font-size: 14px;
+      line-height: 21px;
+    }
+
+    @include media-breakpoint-up(l) {
+      font-size: 18px;
+      line-height: 27px;
+    }
   }
   a:hover {
     color: white;
