added animation, made mobile menu, all works done

--- a/src/app/sections/Experience/Experience.module.scss
+++ b/src/app/sections/Experience/Experience.module.scss
@@ -1,6 +1,7 @@
 @import "/src/app/styles/mixins.scss";
 
 .experience {
+  overflow: hidden;
   @include media-breakpoint-down(lg) {
     padding: 25px 0;
   }
