--- a/src/app/sections/Header/Header.module.scss
+++ b/src/app/sections/Header/Header.module.scss
@@ -5,18 +5,85 @@
   top: 0;
   z-index: 5;
   width: 100%;
+
   background-color: #b2e025;
 
   &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-right: auto;
+    margin-left: auto;
+
     @include media-breakpoint-down(l) {
-      padding: 15px 0;
+      padding: 15px 20px;
     }
 
     @include media-breakpoint-up(l) {
-      padding: 37px 0;
+      padding: 18.5px 20px;
+    }
+
+    @include media-breakpoint-between(sm, md) {
+      max-width: $breakpoints-sm;
+    }
+
+    @include media-breakpoint-between(md, lg) {
+      max-width: $breakpoints-md;
+    }
+
+    @include media-breakpoint-between(lg, l) {
+      max-width: $breakpoints-lg;
+    }
+
+    @include media-breakpoint-between(l, xl) {
+      max-width: $breakpoints-l;
+    }
+
+    @include media-breakpoint-between(xl, xxl) {
+      max-width: $breakpoints-xl;
+    }
+
+    @include media-breakpoint-up(xxl) {
+      max-width: $breakpoints-xxl;
+    }
+  }
+
+  &__logo {
+    @include media-breakpoint-down(l) {
+      font-size: 40px;
+      line-height: 60px;
+    }
+
+    @include media-breakpoint-up(l) {
+      font-size: 64px;
+      line-height: 96px;
+    }
+  }
+
+  &__menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    position: relative;
+
+    &::after,
+    &::before {
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      content: "";
+      position: absolute;
+    }
+
+    &::after {
+      top: 5px;
+    }
+
+    &::before {
+      top: -5px;
     }
   }
 
