--- a/src/app/sections/Header/Header.module.scss
+++ b/src/app/sections/Header/Header.module.scss
@@ -60,30 +60,55 @@
     }
   }
 
-  &__menu-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 18px;
-    height: 2px;
-    background-color: black;
+  &__logo-icon {
+    @include media-breakpoint-down(l) {
+      width: 60px;
+      height: 31px;
+    }
+    @include media-breakpoint-up(l) {
+      width: 86px;
+      height: 57px;
+    }
     position: relative;
-
-    &::after,
-    &::before {
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__menu-btn {
+    @include media-breakpoint-up(l) {
+      display: none;
+    }
+
+    @include media-breakpoint-down(l) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 18px;
       height: 2px;
       background-color: black;
-      content: "";
-      position: absolute;
-    }
+      position: relative;
 
-    &::after {
-      top: 5px;
-    }
+      &::after,
+      &::before {
+        width: 100%;
+        height: 2px;
+        background-color: black;
+        content: "";
+        position: absolute;
+      }
 
-    &::before {
-      top: -5px;
+      &::after {
+        top: 5px;
+      }
+
+      &::before {
+        top: -5px;
+      }
     }
   }
 
