--- a/src/app/components/Quality/Quality.module.scss
+++ b/src/app/components/Quality/Quality.module.scss
@@ -5,17 +5,20 @@
     display: flex;
     align-items: center;
 
+    @include media-breakpoint-down(md) {
+      gap: 10px;
+    }
+
+    @include media-breakpoint-up(md) {
+      gap: 15px;
+    }
+
     p {
       font-weight: 500;
 
       @include media-breakpoint-down(md) {
         font-size: 16px;
         line-height: 24px;
-        gap: 10px;
-      }
-
-      @include media-breakpoint-up(md) {
-        gap: 15px;
       }
 
       @include media-breakpoint-between(md, lg) {
