--- a/src/app/sections/Header/Header.module.scss
+++ b/src/app/sections/Header/Header.module.scss
@@ -92,9 +92,11 @@
       height: 2px;
       background-color: black;
       position: relative;
+      transition: 0.3s ease;
 
       &::after,
       &::before {
+        transition: 0.3s ease;
         width: 100%;
         height: 2px;
         background-color: black;
@@ -108,6 +110,21 @@
 
       &::before {
         top: -5px;
+      }
+    }
+  }
+
+  &__menu-btn--active {
+    @include media-breakpoint-down(l) {
+      transform: rotate(45deg);
+
+      &::before {
+        opacity: 0;
+      }
+
+      &::after {
+        transform: rotate(-90deg);
+        top: 0;
       }
     }
   }
