replaced the images and changed their styles

--- a/src/app/sections/Experience/Experience.module.scss
+++ b/src/app/sections/Experience/Experience.module.scss
@@ -106,6 +106,10 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 20px;
+        overflow: hidden;
+        object-position: top center;
+        object-fit: cover;
       }
     }
 
@@ -137,6 +141,10 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 20px;
+        overflow: hidden;
+        object-position: top center;
+        object-fit: cover;
       }
     }
   }
@@ -194,6 +202,10 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 20px;
+        overflow: hidden;
+        object-position: top center;
+        object-fit: cover;
       }
     }
 
@@ -225,6 +237,10 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 20px;
+        overflow: hidden;
+        object-position: top center;
+        object-fit: cover;
       }
     }
   }
